<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/configuracoes"
            android:textSize="30sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cor_para_as_mesas_reservadas"
            android:layout_marginTop="10sp"
            android:textSize="20sp"
            android:textAlignment="center"/>
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <LinearLayout
                    android:id="@+id/btnConfigRed"
                    android:orientation="vertical"
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:layout_margin="10sp"
                    android:background="@color/red"
                    />
                <LinearLayout
                    android:id="@+id/btnConfigBlue"
                    android:orientation="vertical"
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:layout_margin="10sp"
                    android:background="@color/blue"
                    />

            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cor_para_as_mesas_livres"
            android:layout_marginTop="10sp"
            android:textSize="20sp"
            android:textAlignment="center"/>
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <LinearLayout
                    android:id="@+id/btnConfigYellow"
                    android:orientation="vertical"
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:layout_margin="10sp"
                    android:background="@color/yellow"
                    />
                <LinearLayout
                    android:id="@+id/btnConfigPurple"
                    android:orientation="vertical"
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:layout_margin="10sp"
                    android:background="@color/purple"
                    />

            </LinearLayout>
        </HorizontalScrollView>

</LinearLayout>